# adls_api

./: example_async.py  example_sync.py  pyproject.toml  test.py  test.yaml
adls_client/: __init__.py  adls.sync.py  adls_async.py  auth_async.py  auth_base.py  auth_sync.py  client_async.py  client_base.py  client_sync.py
pipeline/: pipeline.py
pipeline/tasks/: base.py  example.py
pipeline/types/: base.py  replicator.py
