[project]
name = "adls_client"
version = "0.1.0"
description = "Python library for Azure Data Lake Storage Gen2 with both async and sync clients."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

[project.dependencies]
httpx = ">=0.23.0"
requests = ">=2.26.0"